--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,20 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<systemPropertyVariables>
+						<DATABASE_URL>${env.DATABASE_URL}</DATABASE_URL>
+						<DATABASE_USERNAME>${env.DATABASE_USERNAME}</DATABASE_USERNAME>
+						<DATABASE_PASSWORD>${env.DATABASE_PASSWORD}</DATABASE_PASSWORD>
+						<CLOUDAMQP_URL>${env.CLOUDAMQP_URL}</CLOUDAMQP_URL>
+						<CLOUDAMQP_USERNAME>${env.CLOUDAMQP_USERNAME}</CLOUDAMQP_USERNAME>
+						<CLOUDAMQP_PASSWORD>${env.CLOUDAMQP_PASSWORD}</CLOUDAMQP_PASSWORD>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
