--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -35,4 +35,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP}}
-          heroku_email: "${{secrets.HEROKU_EMAIL}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
