--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -1,10 +1,14 @@
-name: Gradle CI/CD
+name: Build
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - 'master'
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - 'master'
+      - 'release'
+      - 'develop'
 
 jobs:
   build:
@@ -12,7 +16,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
