--- a/.github/workflows/azure-staging-deployment.yml
+++ b/.github/workflows/azure-staging-deployment.yml
@@ -24,7 +24,7 @@ jobs:
           distribution: 'temurin'
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-      - name: Run build with Gradle Wrapper
+      - name: Gradle build
         run: |
           chmod +x gradlew
           ./gradlew build
