--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -10,6 +10,9 @@ jobs:
   deploy:
     name: Deploy to Heroku
     runs-on: ubuntu-latest
+    environment:
+      name: 'Staging'
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
