--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.0'
     implementation 'org.springframework.boot:spring-boot-configuration-processor:3.1.0'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+    implementation 'com.h2database:h2:2.2.220'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
