Forget password reset

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: classpath:/db/migration/11-01-changelog.yaml
+  - include:
+      file: classpath:/db/migration/CreatePasswordResetTokenTable.yaml
