--- a/build.gradle
+++ b/build.gradle
@@ -26,19 +26,29 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.1'
     implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.1'
     implementation 'org.springframework.security:spring-security-oauth2-client:6.1.1'
-    implementation 'mysql:mysql-connector-java:8.0.33'
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    implementation 'org.liquibase:liquibase-core:4.23.0'
-    compileOnly 'org.projectlombok:lombok:1.18.28'
-    annotationProcessor 'org.projectlombok:lombok:1.18.28'
     implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.1'
     implementation 'org.springframework.boot:spring-boot-configuration-processor:3.1.1'
+
+    implementation 'mysql:mysql-connector-java:8.0.33'
+
+    implementation 'org.liquibase:liquibase-core:4.23.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.28'
+    annotationProcessor 'org.projectlombok:lombok:1.18.28'
+
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+
     implementation 'com.h2database:h2:2.2.220'
+
+    implementation 'org.postgresql:postgresql:42.2.27'
+
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.1'
     testImplementation 'org.springframework.security:spring-security-test:6.1.1'
 
