--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,6 +1,14 @@
-datasource:
-  url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-  username: sa
-  password: sa
-  driver-class-name: org.h2.Driver
-  connection-timeout: 10000
+spring:
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.h2dialect
+        format_sql: true
+  datasource:
+    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+    username: sa
+    password: sa
+    driver-class-name: org.h2.Driver
