--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.1'
+    id 'org.springframework.boot' version '3.1.2'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -20,14 +20,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-security:3.1.1'
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.1'
-    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.1'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.1'
-    implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.1'
-    implementation 'org.springframework.security:spring-security-oauth2-client:6.1.1'
-    implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.1'
-    implementation 'org.springframework.boot:spring-boot-configuration-processor:3.1.1'
+    implementation 'org.springframework.boot:spring-boot-starter-security:3.1.2'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.2'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.2'
+    implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.2'
+    implementation 'org.springframework.security:spring-security-oauth2-client:6.1.2'
 
     implementation 'mysql:mysql-connector-java:8.0.33'
 
@@ -49,8 +47,11 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.1'
-    testImplementation 'org.springframework.security:spring-security-test:6.1.1'
+    implementation 'com.google.firebase:firebase-admin:9.1.1'
+    implementation 'com.google.cloud:google-cloud-storage:2.20.1'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.2'
+    testImplementation 'org.springframework.security:spring-security-test:6.1.2'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
