--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.2'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '3.1.4'
+    id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'org'
@@ -20,11 +20,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-security:3.1.2'
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.2'
-    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.2'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.2'
-    implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.2'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.security:spring-security-oauth2-client:6.1.2'
 
     implementation 'mysql:mysql-connector-java:8.0.33'
@@ -50,7 +50,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-admin:9.1.1'
     implementation 'com.google.cloud:google-cloud-storage:2.20.1'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.2'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test:6.1.2'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
