--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,7 @@ spring:
             enable: true
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yaml
+    enabled: false
 
   servlet:
     multipart:
@@ -47,4 +48,6 @@ app:
       - http://localhost:3000/oauth2/redirect
       - myandroidapp://oauth2/redirect
       - myiosapp://oauth2/redirect
+
+
 
