--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,5 @@
 databaseChangeLog:
   - include:
-      file: classpath:/db/migration/11-01-changelog.yaml
-  - include:
-      file: classpath:/db/migration/CreatePasswordResetTokenTable.yaml
+      file: src/main/resources/db/migration/14-01-changelog.yaml
+#      file: src/main/resources/db/migration/createNewSchemas.yaml
+#      file: classpath:/db/migration/createNewSchemas.yaml
