--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
-  - includeAll:
-      path: src/main/resources/db/migration
+  - include:
+      file: src/main/resources/db/migration/14-01-changelog.yaml
+#      file: src/main/resources/db/migration/createNewSchemas.yaml
+#      file: classpath:/db/migration/createNewSchemas.yaml
