--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -8,7 +8,7 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
   datasource:
-    url: jdbc:mysql://localhost:3306/spring_social
+    url: jdbc:mysql://localhost:3306/test_liquibase
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
