--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,12 +1,14 @@
 spring:
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
   datasource:
-    url: jdbc:mysql://localhost:3307/testDB
+    url: jdbc:mysql://localhost:3306/test_liquibase
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
