--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.4'
-    id 'io.spring.dependency-management' version '1.1.3'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.liquibase.gradle' version '2.2.1'
 }
 
 group = 'org'
@@ -25,11 +26,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-    implementation 'org.springframework.security:spring-security-oauth2-client:6.1.2'
+    implementation 'org.springframework.security:spring-security-oauth2-client:6.2.0'
 
     implementation 'mysql:mysql-connector-java:8.0.33'
 
-    implementation 'org.liquibase:liquibase-core:4.23.0'
+//    implementation 'org.liquibase:liquibase-core:4.23.0'
 
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
@@ -40,9 +41,6 @@ dependencies {
 
     implementation 'org.postgresql:postgresql:42.2.27'
 
-//    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-//    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
-
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
@@ -51,12 +49,30 @@ dependencies {
     implementation 'com.google.cloud:google-cloud-storage:2.20.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test:6.1.2'
+    testImplementation 'org.springframework.security:spring-security-test:6.2.0'
     testImplementation 'org.mockito:mockito-core:5.7.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
+
+    liquibaseRuntime 'org.liquibase:liquibase-core:4.23.0'
+    liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:3.0.3'
+    liquibaseRuntime 'info.picocli:picocli:4.7.4'
+    liquibaseRuntime 'mysql:mysql-connector-java:8.0.33'
+}
+
+liquibase {
+    activities {
+        main {
+            changelogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
+            url 'jdbc:mysql://localhost:3306/test_liquibase'
+            username 'root'
+            password 'root'
+            logLevel 'info'
+        }
+    }
+    runList = 'main'
 }
 
 jar {
