--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,9 +24,9 @@ spring:
           auth: true
           starttls:
             enable: true
-  liquibase:
-    change-log: classpath:db/changelog/db.changelog-master.yaml
-    enabled: false
+#  liquibase:
+#    change-log: classpath:db/changelog/db.changelog-master.yaml
+#    enabled: false
 
   servlet:
     multipart:
