Liquibase gradle plugin spring boot (#44)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,8 +24,13 @@ spring:
           auth: true
           starttls:
             enable: true
-  liquibase:
-    change-log: classpath:db/changelog/db.changelog-master.yaml
+#  liquibase:
+#    change-log: classpath:db/changelog/db.changelog-master.yaml
+#    enabled: false
+
+  servlet:
+    multipart:
+      max-file-size: 100MB
 
 app:
   auth:
