--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,12 @@ services:
     depends_on:
       - mysql
     environment:
-      DB_URL: jdbc:mysql://mysql:3307/testDB
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/testDB?autoReconnect=true&useSSL=false
+      APP_PASSWORD: bnptvnwccmxgwuxq
+      GOOGLE_CLIENT_SECRET: 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
+      GOOGLE_CLIENT_ID: 782330301173-u95n2p5pc6obg6nim17bq7m4kmm861tt.apps.googleusercontent.com
+      TOKEN_SECRET: 37e2a786c5dc962fac3cfcf5c72b592339abbd7433148e8ed2dd0fc13f1d7402a53de020cb3b0b75f534b9937e191943f3feff64c88af6fbb3eb9e47dccadfa2
+      ENV: local
 
   # MySQL database
   mysql:
@@ -16,7 +21,5 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: testDB
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
     ports:
       - "3307:3306"
