--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
             scope:
               - email
               - profile
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yaml
+    enabled: false
+
   mail:
     host: smtp.gmail.com
     port: 587
@@ -24,9 +28,6 @@ spring:
           auth: true
           starttls:
             enable: true
-#  liquibase:
-#    change-log: classpath:db/changelog/db.changelog-master.yaml
-#    enabled: false
 
   servlet:
     multipart:
