--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -53,17 +53,17 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        id: buildx
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#        id: buildx
 
       - name: Build and push
         uses: docker/build-push-action@v5
         id: docker_build
         with:
-          context: .
-          file: ./Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
+#          context: .
+#          file: ./Dockerfile
+#          builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/crochet:latest
       - name: Verify
