--- a/.github/workflows/docker-deployment.yml
+++ b/.github/workflows/docker-deployment.yml
@@ -1,12 +1,12 @@
-name: Heroku Deployment
+name: Docker deployment
 
 on:
   workflow_dispatch:
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
+    name: Build
     environment: littlecrochet
     steps:
       - name: Checkout repository
@@ -34,18 +34,28 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew build
-  deploy:
-    name: Deploy to Heroku
-    runs-on: ubuntu-latest
+  docker:
     needs: build
+    runs-on: ubuntu-latest
+    name: Build & push Docker image
     environment: littlecrochet
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Deploy to heroku
-        uses: akhileshns/heroku-deploy@v3.12.14
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ vars.HEROKU_APP }}
-          heroku_email: ${{ vars.HEROKU_EMAIL }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        id: buildx
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        id: docker_build
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/crochet:latest
+      - name: Verify
+        run: echo ${{ steps.docker_build.outputs.digest }}
