--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -13,17 +13,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    name: Build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+
       - name: Gradle build
         env:
           ENV: ${{ vars.ENV }}
