Add PayPal for payment

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,6 +14,6 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 paypal:
-  username: AYw-XWRSOe3r11W37cF26rxf3tUBn8X1dPala2Lux2cGHbK6NYMiyYB_2SES46YjIx1a9zLuMSHSJpYD
-  password: EENLA_G2RtWbTYgY6i90ApZkYdctBuY2AcgnsHhct0sbCnwWiM_J55NTmmEsLbiDcNpnLEfBWPneTmwF
+  username: ${PAYPAL_CLIENT_ID}
+  password: ${PAYPAL_CLIENT_SECRET}
 
