--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.0'
+    id 'org.springframework.boot' version '3.2.1'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.liquibase.gradle' version '2.2.1'
 }
@@ -56,6 +56,7 @@ dependencies {
 
     implementation 'com.google.inject:guice:7.0.0'
     implementation 'com.google.inject.extensions:guice-servlet:7.0.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     implementation 'com.github.crochetwebclient:crochetwebclient:1.0.3'
 
