--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,12 @@ spring:
     multipart:
       max-file-size: 100MB
 
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration
+  mvc:
+    converters:
+      preferred-json-mapper: gson
+
 app:
   auth:
     tokenSecret: ${TOKEN_SECRET}
