--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.security:spring-security-oauth2-client:6.2.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
     implementation 'mysql:mysql-connector-java:8.0.33'
@@ -58,12 +57,13 @@ dependencies {
     implementation 'com.google.inject.extensions:guice-servlet:7.0.0'
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    implementation 'com.github.crochetwebclient:crochetwebclient:1.0.4'
+    implementation("com.squareup.okhttp3:okhttp:4.12.0")
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test:6.2.0'
     testImplementation 'org.mockito:mockito-core:5.7.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.12.0")
 
     testCompileOnly 'org.projectlombok:lombok:1.18.30'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
@@ -78,7 +78,7 @@ liquibase {
     activities {
         main {
             changelogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
-            url 'jdbc:mysql://localhost:3306/testDB'
+            url 'jdbc:mysql://localhost:3307/testDB'
             username 'root'
             password 'root'
         }
