--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,3 @@
 databaseChangeLog:
-  - include:
-      file: src/main/resources/db/migration/schemas.sql
+  - includeAll:
+      path: src/main/resources/db/migration
