--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.security:spring-security-oauth2-client:6.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
@@ -57,7 +58,7 @@ dependencies {
     implementation 'com.google.inject.extensions:guice-servlet:7.0.0'
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    implementation("com.squareup.okhttp3:okhttp:4.12.0")
+    implementation 'com.github.crochetwebclient:crochetwebclient:1.0.4'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test:6.2.0'
