--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    implementation 'com.azure:azure-storage-blob:12.25.1'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test:6.2.0'
     testImplementation 'org.mockito:mockito-core:5.7.0'
