--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -7,6 +7,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    environment: little-crochet-prod
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -22,10 +23,12 @@ jobs:
 
       - name: Gradle build
         env:
-          ENV: ${{ vars.ENV }}
-          DB_URL: ${{ vars.DB_URL }}
-          DATABASE_USERNAME: ${{ vars.DATABASE_USERNAME }}
-          DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+          env: prod
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
           TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
@@ -39,7 +42,7 @@ jobs:
     name: Deploy to Heroku
     runs-on: ubuntu-latest
     needs: build
-    environment: littlecrochet
+    environment: little-crochet-prod
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -48,5 +51,5 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.13.15
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ vars.HEROKU_APP }}
-          heroku_email: ${{ vars.HEROKU_EMAIL }}
+          heroku_app_name: ${{ secrets.HEROKU_APP }}
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
