--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -25,10 +25,12 @@ jobs:
         uses: gradle/gradle-build-action@v3
       - name: Gradle build
         env:
-          ENV: ${{ vars.ENV }}
-          DB_URL: ${{ vars.DB_URL }}
-          DATABASE_USERNAME: ${{ vars.DATABASE_USERNAME }}
-          DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+          env: dev
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
           TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
