--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
     implementation 'com.mysql:mysql-connector-j:8.3.0'
-    implementation 'org.liquibase:liquibase-core:4.23.0'
+    implementation 'org.liquibase:liquibase-core:4.27.0'
     implementation 'com.h2database:h2:2.2.220'
     implementation 'org.postgresql:postgresql:42.7.3'
 
@@ -63,7 +63,7 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.30'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 
-    liquibaseRuntime 'org.liquibase:liquibase-core:4.23.0'
+    liquibaseRuntime 'org.liquibase:liquibase-core:4.27.0'
     liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:3.0.3'
     liquibaseRuntime 'info.picocli:picocli:4.7.4'
     liquibaseRuntime 'com.mysql:mysql-connector-j:8.3.0'
@@ -73,10 +73,10 @@ dependencies {
 liquibase {
     activities {
         main {
-            changelogFile 'src/main/resources/db/changelog/gradle/db.changelog-master.yaml'
-            url 'jdbc:mysql://localhost:3306/testDB'
-            username 'root'
-            password 'root'
+            changelogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
+            url 'jdbc:' + System.getenv('DB') + '://' + System.getenv('DB_HOST') + ':' + System.getenv('DB_PORT') + '/' + System.getenv('DB_NAME')
+            username System.getenv('DB_USERNAME')
+            password System.getenv('DB_PASSWORD')
         }
     }
     runList = 'main'
