Add Token Blacklist table
- Token Blacklist is used to store tokens. These tokens will be disabled, it will not be possible to use this token to request

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,7 @@
 databaseChangeLog:
   - include:
       file: src/main/resources/db/migration/2024-05-02-first-creation-schemas.yaml
+  - include:
+      file: src/main/resources/db/migration/2024-05-03-add-constraint.yaml
+  - include:
+      file: src/main/resources/db/migration/2024-05-03-add-token-blacklist.yaml
