Allow Cors origin

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,7 +35,10 @@ app:
     tokenExpirationMs: 900000 # 15 minutes
     refresh-token-expiration-ms: 86400000 # 1 day
   cors:
-    allowedOrigins: http://localhost:3000,http://localhost:8080
+    allowedOrigins:
+      - http://localhost:3000
+      - https://tieuphuongcrochet.com
+      - https://tieuphuongcrochet.github.io
   oauth2:
     # After successfully authenticating with the OAuth2 Provider,
     # we'll be generating an auth token for the user and sending the token to the
@@ -43,8 +46,9 @@ app:
     # We're not using cookies because they won't work well in mobile clients.
     authorizedRedirectUris:
       - http://localhost:3000/oauth2/redirect
-      - myandroidapp://oauth2/redirect
-      - myiosapp://oauth2/redirect
+      - https://tieuphuongcrochet.com/oauth2/redirect
+      - crochetandroidapp://oauth2/redirect
+      - crochetiosapp://oauth2/redirect
 
 authorize:
   http-request:
