Add redis cache (#108)
* Add redis configuration and update other ones

* Remove batch insert

* Add redis cache

* Add cache for home page

- Add variable environment for workflows

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,3 +16,9 @@ spring:
 paypal:
   username: ${PAYPAL_CLIENT_ID}
   password: ${PAYPAL_CLIENT_SECRET}
+
+redis:
+  host: ${REDIS_HOST}
+  port: ${REDIS_PORT}
+  username: default
+  password: ${REDIS_PASSWORD}
