--- a/.github/workflows/docker-deployment.yml
+++ b/.github/workflows/docker-deployment.yml
@@ -36,6 +36,9 @@ jobs:
             APP_PASSWORD=${{ secrets.APP_PASSWORD }}
             PAYPAL_CLIENT_ID=${{ secrets.PAYPAL_CLIENT_ID }}
             PAYPAL_CLIENT_SECRET=${{ secrets.PAYPAL_CLIENT_SECRET }}
+            REDIS_HOST=${{ secrets.REDIS_HOST }}
+            REDIS_PORT=${{ secrets.REDIS_PORT }}
+            REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/crochet:latest
       - name: Verify
