Remove avatar column in blog post

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: src/main/resources/db/migration/2024-05-03-add-constraint.yaml
   - include:
       file: src/main/resources/db/migration/2024-05-03-add-token-blacklist.yaml
+  - include:
+      file: src/main/resources/db/migration/2024-05-12-remove-avatar-column-in-blog-table.yaml
