--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -1,7 +1,13 @@
 name: Heroku Deployment
 
 on:
-  workflow_dispatch:
+  workflow_run:
+    workflows: [ "Build on Production" ]
+    types:
+      - completed
+  push:
+    branches:
+      - 'master'
 
 jobs:
   deploy:
