Custom the number of element which will display in home

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,6 +69,7 @@ authorize:
       - "/blog-categories/create"
       - "/blog-categories/update"
       - "/blog-categories/delete/**"
+      - "/setting/**"
 
 firebase:
   serviceAccountKey: ${SERVICE_ACCOUNT_KEY}
