Fix CORS part 2
Make allowed origins as variable environment
Some change with task executor
Add allowed origins env to docker file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,6 +49,7 @@ app:
 
 authorize:
   http-request:
+    allowedOrigins: ${ALLOWED_ORIGINS}
     authenticated:
       - "/blog/create"
       - "/comment/create"
