Clear cache in get all functions that contain filter Update spring boot version Change UUID to String in RefreshTokenRepo

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -82,7 +82,7 @@ management:
         include: health,metrics,prometheus
   metrics:
     tags:
-      application: ${spring.application.name}
+      application: crochet-application
   prometheus:
     metrics:
       export:
